--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,11 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "numpy >=1.0.0, <2.0.0",
-    "pandas >=1.0.0, <2.0.0",
-    "scipy >=1.0.0, <2.0.0",
-    "matplotlib >=3.0.0, <4.0.0",
+    "numpy",
+    "pandas",
+    "scipy",
+    "matplotlib",
+    "scikit-learn",
 ]
 
 [project.optional-dependencies]
