--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ nav:
       - Overview: examples/README.md
       - Reading a .dat File: examples/reading_dat_file.ipynb
       - Raw Data and the .rw.dat File: examples/rwdat_file.ipynb
-  - File Formatting: file_formatting.md
+      - The MvsH Experiment: examples/mvsh.ipynb
   - API:
       - Magnetopy:
           - Magnetometry: api/magnetometry.md
@@ -25,6 +25,8 @@ nav:
           - Utils:
               - Parsing: api/parsing_utils.md
               - Plotting: api/plot_utils.md
+  - File Formatting: file_formatting.md
+  - Standard Calibration Library: standard_calibration_library.md
 
 theme:
   name: material
