create magnetometry example

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
       - Raw Data and the .rw.dat File: examples/rwdat_file.ipynb
       - The MvsH Experiment Class: examples/mvsh.ipynb
       - The ZFC and FC Experiment Classes: examples/zfcfc.ipynb
+      - Datasets in MagnetoPy - The `Magnetometry` Class: examples/magnetometry.ipynb
   - API:
       - Magnetopy:
           - Magnetometry: api/magnetometry.md
