--- a/.pylintrc
+++ b/.pylintrc
@@ -2,4 +2,4 @@
 docstring-min-length=10
 disable=missing-function-docstring,missing-class-docstring,missing-module-docstring,unnecessary-ellipsis
 [FORMAT]
-good-names=i,j,k,x,y,n,f,id,cm,rf,ax,df,sc,tc,ac,fc,zfc
+good-names=i,j,k,x,y,n,f,id,cm,rf,ax,df,sc,tc,ac,fc,zfc,h,m
