--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
       - The ZFC and FC Experiment Classes: examples/zfcfc.ipynb
       - Datasets in MagnetoPy - The `Magnetometry` Class: examples/magnetometry.ipynb
       - A Simple MvsH Analysis: examples/mvsh_analysis.ipynb
+      - Quantification of Hysteresis Data using Cauchy Distribution Functions: examples/cauchy.ipynb
   - API:
       - Magnetopy:
           - Magnetometry: api/magnetometry.md
